# Gsoc2014-OCL

./: CMakeLists.txt  README.md
common/: CMakeLists.txt
features/: CMakeLists.txt
filters/: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt12~  CMakeLists.txt~
filters/include/pcl/ocl/filters/: VectorAddition.h  VectorAddition.h~  convolution.h  fast_bilateral.h  median_filter.h  median_filter.h~  passthrough.h  radius_outlier_removal.h  radius_outlier_removal.h~  statistical_outlier_removal.h  voxel_grid.h
filters/include/pcl/ocl/filters/impl/: convolution.hpp  fast_bilateral.hpp  median_filter (copy).hpp  median_filter.hpp  median_filter.hpp~  passthrough.hpp  passthrough.hpp~  radius_outlier_removal.hpp  radius_outlier_removal.hpp~  statistical_outlier_removal.hpp  voxel_grid.hpp
filters/include/pcl/ocl/filters/impl/cl/: convolve.cl  convolve.clbin  fast_bilateral.cl  median_filter.cl  median_filter.clbin  median_filter.cl~  passthrough.cl  passthrough.clbin
filters/src/: VectorAddition.cpp  VectorAddition.cpp~  fast_bilateral.cpp  median_filter.cpp  median_filter.cpp~  passthrough.cpp  radius_outlier_removal.cpp  radius_outlier_removal.cpp~  statisticalOutlierRemoval.cpp
octree/: CMakeLists.txt  CMakeLists.txt~
octree/include/pcl/ocl/octree/: octree.h~
octree/include/pcl/ocl/octree/impl/: bitonic_sort.hpp  bitonic_sort.hpp~  min_max.hpp  min_max.hpp~  morton.hpp  morton.hpp~  morton_cl.hpp  morton_cl.hpp~  octree.hpp  octree.hpp~  octree_build.hpp  octree_build.hpp~
octree/include/pcl/ocl/octree/impl/cl/: bitonic_sorting.cl  min_max_3d.cl  morton.cl
octree/src/: octree.cpp  octree.cpp~
sample_consensus/: CMakeLists.txt
search/: CMakeLists.txt
search/include/pcl/ocl/search/: brute_force.h  flann_search.h  kdtree.h  octree.h  octree_cl.h  organized.h  pcl_search.h  search.h
search/include/pcl/ocl/search/impl/: brute_force.hpp  flann_search.hpp  kdtree.hpp  organized.hpp  search.hpp
search/src/: brute_force.cpp  kdtree.cpp  octree.cpp  octree_cl.cpp  organized.cpp
segmentation/: CMakeLists.txt
tracking1/: CMakeLists.txt
tracking1/include/pcl/ocl/tracking/: approx_nearest_pair_point_cloud_coherence.h  boost.h  coherence.h  distance_coherence.h  hsv_color_coherence.h  kld_adaptive_particle_filter.h  nearest_pair_point_cloud_coherence.h  normal_coherence.h  particle_filter.h  pyramidal_klt.h  tracker.h  tracking.h
tracking1/include/pcl/ocl/tracking/impl/: approx_nearest_pair_point_cloud_coherence.hpp  coherence.hpp  distance_coherence.hpp  hsv_color_coherence.hpp  kld_adaptive_particle_filter.hpp  nearest_pair_point_cloud_coherence.hpp  normal_coherence.hpp  particle_filter.hpp  pyramidal_klt.hpp  tracker.hpp  tracking.hpp
tracking1/include/pcl/ocl/tracking/impl/cl/: hsv_color_coherence.cl  min_max_3d.cl
tracking1/src/: coherence.cpp  particle_filter.cpp  tracking.cpp
utils/: CMakeLists.txt
utils/include/pcl/ocl/utils/: ocl_manager.h  ocl_manager.h~
utils/include/pcl/ocl/utils/impl/: ocl_kernel_builder.hpp
utils/src/: ocl_manager.cpp  ocl_manager.cpp~
