set(SUBSYS_NAME ocl)
set(SUBSYS_DESC "Point cloud OpenCL libraries")
set(SUBSYS_DEPS )

OPTION(BUILD_OCL "Build the OpenCL-related subsystems" ${DEFAULT})
#find_package(OpenCL REQUIRED)
if(BUILD_OCL)

        if(CMAKE_COMPILER_IS_GNUCXX)
                string(REPLACE "-Wold-style-cast" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
                string(REPLACE "-Wno-invalid-offsetof" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
                set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-conversion -Wno-unused-parameter -Wno-unused-variable -Wno-unused-function")
    if (GCC_VERSION VERSION_GREATER 4.3)
      SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-but-set-variable")
    endif()
        endif()

        collect_subproject_directory_names(${CMAKE_CURRENT_SOURCE_DIR} "CMakeLists.txt" PCL_OCL_MODULES_NAMES PCL_OCL_MODULES_DIRS)
        set(PCL_OCL_MODULES_NAMES_UNSORTED ${PCL_OCL_MODULES_NAMES})
        topological_sort(PCL_OCL_MODULES_NAMES PCL_ _DEPENDS)
        sort_relative(PCL_OCL_MODULES_NAMES_UNSORTED PCL_OCL_MODULES_NAMES PCL_OCL_MODULES_DIRS)
        foreach(subdir ${PCL_OCL_MODULES_DIRS})
                add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/${subdir})
        endforeach(subdir)
endif()
